fix navigation center-alignment and landscape background image path

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -267,7 +267,7 @@ Navigation
   position: absolute;
   height: 26px;
   right: 10px;
-  top: 48px;
+  top: 46px;
   visibility: hidden;
   transition: all 300ms ease-in-out;
 }
@@ -277,7 +277,7 @@ Hero
 ========================================================================== */
 .hero {
   min-height: 750px;
-  background: url('../img/landscape.jpg') center center;
+  background: url('../img/landscape.jpeg') center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -341,9 +341,10 @@ header {
   }
   .logo {
     display: inline-block;
+    vertical-align: middle;
   }
   .logo img {
-    height: 19px;
+    height: 55px;
   }
   ul.primary-nav {
     margin: 0 0 0 75px;
@@ -380,11 +381,12 @@ header {
   }
   .header-nav {
     display: inline-block;
+    vertical-align: middle;
   }
   .member-actions {
     position: absolute;
     right: 0;
-    top: 41px;
+    top: 50px;
     transition: all 300ms ease-in-out;
   }
 }
